[package]
name = "mtls-actix"
version = "0.1.0"
edition = "2021"
authors = ["Crellsin"]
description = "Actix-web middleware for mTLS authentication with IP whitelisting"
license = "GPL-3.0"
repository = "https://github.com/Crellsin/mtls-rs"
readme = "README.md"
keywords = ["mtls", "tls", "authentication", "actix", "middleware", "security", "ip-whitelist"]
categories = ["web-programming", "authentication", "api-bindings", "cryptography"]

[dependencies]
mtls-core = { path = "../mtls-core", version = "0.1.0" }
actix-web = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
serde = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
