[package]
name = "mtls-core"
version = "0.1.0"
edition = "2021"
authors = ["Crellsin"]
description = "Core mTLS authentication library with IP whitelisting for Rust applications"
license = "GPL-3.0"
repository = "https://github.com/Crellsin/mtls-rs"
readme = "README.md"
keywords = ["mtls", "tls", "authentication", "security", "ip-whitelist"]
categories = ["api-bindings", "cryptography", "network-programming", "web-programming"]

[dependencies]
tokio = { workspace = true, features = ["net", "io-util", "rt", "macros"] }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rustls-native-certs = { workspace = true }
x509-parser = { workspace = true }
ipnetwork = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio-rustls = "0.25.0"
time = "0.3.0"
rustls-pki-types = "0.1.0"

[dev-dependencies]
env_logger = { workspace = true }

[features]
default = ["rustls"]
openssl = ["dep:openssl"]
rustls = []  # enabled by default

# If we want to support openssl as an alternative backend
[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl = { version = "0.10", optional = true }
