[package]
name = "mtls-examples"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Example implementations for mTLS authentication"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Crellsin/mtls-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mtls-core = { path = "../mtls-core", version = "0.1.0" }
mtls-actix = { path = "../mtls-actix", version = "0.1.0", optional = true }
mtls-rocket = { path = "../mtls-rocket", version = "0.1.0", optional = true }
mtls-tcp = { path = "../mtls-tcp", version = "0.1.0", optional = true }
mtls-grpc = { path = "../mtls-grpc", version = "0.1.0", optional = true }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.0"
toml = "0.8.0"
log = "0.4.0"
env_logger = "0.11.0"

[features]
default = []
actix = ["mtls-actix"]
rocket = ["mtls-rocket"]
tcp = ["mtls-tcp"]
grpc = ["mtls-grpc"]
