[package]
name = "mtls-examples"
version = "0.1.0"
edition = "2021"
authors = ["Crellsin"]
description = "Example implementations for mTLS authentication with IP whitelisting"
license = "GPL-3.0"
repository = "https://github.com/Crellsin/mtls-rs"
readme = "README.md"
keywords = ["mtls", "tls", "authentication", "examples", "security", "ip-whitelist"]
categories = ["api-bindings", "cryptography", "network-programming", "web-programming"]
publish = false  # This is an examples crate, not intended for direct dependency

[dependencies]
mtls-core = { path = "../mtls-core", version = "0.1.0" }
mtls-actix = { path = "../mtls-actix", version = "0.1.0", optional = true }
mtls-rocket = { path = "../mtls-rocket", version = "0.1.0", optional = true }
mtls-tcp = { path = "../mtls-tcp", version = "0.1.0", optional = true }
mtls-grpc = { path = "../mtls-grpc", version = "0.1.0", optional = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[features]
default = []
actix = ["mtls-actix"]
rocket = ["mtls-rocket"]
tcp = ["mtls-tcp"]
grpc = ["mtls-grpc"]
